--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
+    "chart.js": "^3.8.0",
     "d3": "^7.4.4",
-    "vue": "^3.2.36"
+    "vue": "^3.2.36",
+    "vue-chartjs": "^4.1.1"
   },
   "devDependencies": {
     "@types/node": "^16.11.36",
