--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "pokedex-vue",
   "version": "0.0.0",
   "scripts": {
-    "dev": "vite",
     "build": "run-p type-check build-only",
-    "preview": "vite preview --port 4173",
+    "test:unit": "vue-cli-service test:unit",
     "build-only": "vite build",
+    "dev": "vite",
+    "preview": "vite preview --port 4173",
     "type-check": "vue-tsc --noEmit"
   },
   "dependencies": {
@@ -18,7 +19,12 @@
   "devDependencies": {
     "@types/node": "^16.11.36",
     "@vitejs/plugin-vue": "^2.3.3",
+    "@vue/cli-plugin-unit-jest": "~5.0.0",
+    "@vue/test-utils": "^2.0.0-0",
     "@vue/tsconfig": "^0.1.3",
+    "@vue/vue3-jest": "^27.0.0-alpha.1",
+    "babel-jest": "^27.0.6",
+    "jest": "^27.0.5",
     "npm-run-all": "^4.1.5",
     "typescript": "~4.7.2",
     "vite": "^2.9.9",
